# fastapi-redis-project

./: .env-demo  .env-development  .gitignore  REDIS_HASH_API_EXAMPLES.md  REDIS_STRING_API_EXAMPLES.md  pyproject.toml
md/: REDIS_LIST_API_EXAMPLES.md  test.md
src/: config.py  create_app.py  main.py  redis_client.py
src/config/: ai_configs.py  env.py
src/controller/: add_user_route.py
src/middlewares/: app_middlewares.py
src/model/: BasicModel.py  OrgModel.py  PosModel.py  UserModel.py
src/routes/: redis_hash.py  redis_list.py  redis_set.py  redis_string.py  redis_zset.py  root.py
src/utils/: CrpyUtils.py  create_module_service.py  db_utils.py  next_id.py  postgres_checkpointer.py
